log bird log to it's own log file
Signed-off-by: Bin Zhang <bzhang257@bloomberg.net>

--- a/ansible/playbooks/roles/common/templates/bird/bird.conf.j2
+++ b/ansible/playbooks/roles/common/templates/bird/bird.conf.j2
@@ -1,6 +1,9 @@
 router id {{ interfaces['service']['ip'] }};
 
-log syslog { info, remote, warning, error, auth, fatal, bug };
+log "/var/log/bird/bird.log" { info, remote, warning, error, auth, fatal, bug, trace, debug };
+
+debug protocols all;
+watchdog warning 2 s;
 
 filter to_tor {
   if net != 127.0.0.0/8 then accept;
