cinder: Enable active-active clustering mode
We currently run `cinder` in active-passive clustering
mode.  This commit enables `cinder` to run active-active
and increase backend throughput and improve cluster
operability.

Signed-off-by: Tyler Stachecki <tstachecki@bloomberg.net>

--- a/chef/cookbooks/bcpc/templates/default/cinder/cinder.conf.erb
+++ b/chef/cookbooks/bcpc/templates/default/cinder/cinder.conf.erb
@@ -1,5 +1,6 @@
 [DEFAULT]
-host = bcpc
+host = <%= node['hostname'] %>
+cluster = <%= node['bcpc']['cloud']['region'] %>
 allow_availability_zone_fallback = true
 rootwrap_config = /etc/cinder/rootwrap.conf
 api_paste_config = /etc/cinder/api-paste.ini
@@ -21,6 +22,9 @@ enable_v3_api = true
 <% if @scheduler_default_filters.any? %>
 scheduler_default_filters = <%= @scheduler_default_filters.join(',') %>
 <% end %>
+
+[backend]
+backend_name = <%= node['hostname'] %>
 
 <% if !node['bcpc']['cinder']['backend_native_threads_pool_size'].nil? %>
 [backend_defaults]
