configure-system: Changes for Focal
  * apt: Update sources to reference new codename (Focal).

  * apt: Do not consume bird2 from backports; bird2 is now
    packaged in mainline repositories and we should consume
    it from there.

  * chrony/hardening: Enable seccomp filtering.

  * chrony: Remove systemd service override to wait on the
    networking going up: the unit files in Focal handle
    this appropriately already.

  * sshd/hardening: Disallow root password-based logins.

  * systemd-resolved: Remove backout of resolved.conf; in-
    place Bionic updates are unlikely to be supported, and
    the backout has been in place in the tree for awhile.

  * system: Start tracking Focal's HWE-edge kernel, instead
    of Bionic's HWE-edge kernel.

  * system: Purge off a litany of unnecessary packages for
    and purge off any unused dependencies they pulled in.

  * tinyproxy: Adapt to new configuration syntax.

Signed-off-by: Tyler Stachecki <tstachecki@bloomberg.net>

--- a/ansible/playbooks/roles/common/templates/ssh/sshd_config.j2
+++ b/ansible/playbooks/roles/common/templates/ssh/sshd_config.j2
@@ -33,7 +33,7 @@ LogLevel INFO
 
 # Authentication:
 LoginGraceTime 120
-PermitRootLogin yes
+PermitRootLogin prohibit-password
 StrictModes yes
 
 RSAAuthentication yes
