--- a/ansible/playbooks/roles/common/templates/tinyproxy/tinyproxy.conf.j2
+++ b/ansible/playbooks/roles/common/templates/tinyproxy/tinyproxy.conf.j2
@@ -29,14 +29,14 @@ Listen {{ local_proxy['config']['listen'] }}
 # The upstream rules allow you to selectively route upstream connections
 # based on the host/domain of the site being accessed.
 {% for upstream in local_proxy['config'].get('upstream',[]) %}
-upstream {{ upstream }}
+upstream http {{ upstream }}
 {% endfor %}
 
 # no upstream proxy for internal websites and unqualified hosts
-no upstream "{{ cloud_ip }}/32"
-no upstream "{{ cloud_fqdn }}"
+upstream none "{{ cloud_ip }}/32"
+upstream none "{{ cloud_fqdn }}"
 {% for no_upstream in local_proxy['config'].get('no_upstream',[]) %}
-no upstream "{{ no_upstream }}"
+upstream none "{{ no_upstream }}"
 {% endfor %}
 
 
