--- a/ansible/playbooks/roles/common/templates/unbound/server.conf.j2
+++ b/ansible/playbooks/roles/common/templates/unbound/server.conf.j2
@@ -2,6 +2,10 @@
 # managed by ansible
 ###############################################################################
 
+remote-control:
+    control-enable: {{ 'yes' if 'headnodes' is in group_names else 'no' }}
+    control-interface: 127.0.0.1
+
 server:
     access-control: 0.0.0.0/0 allow
     chroot: ""
