--- a/ansible/playbooks/roles/consul/templates/config.json.j2
+++ b/ansible/playbooks/roles/consul/templates/config.json.j2
@@ -5,7 +5,7 @@
   "data_dir": "{{ consul_config_data_directory }}",
   "disable_update_check": true,
   "enable_script_checks": true,
-  "server": {{ true if configure-consul else false }},
+  "server": {{ true if configure-consul == true else false }},
   "log_level": "INFO",
   "node_name": "{{ inventory_hostname }}",
   "addresses": {
