--- a/ansible/playbooks/roles/consul/templates/config.json.j2
+++ b/ansible/playbooks/roles/consul/templates/config.json.j2
@@ -5,7 +5,7 @@
   "data_dir": "{{ consul_config_data_directory }}",
   "disable_update_check": true,
   "enable_script_checks": true,
-  "server": {{ true if configure-consul == true else false }},
+  "server": {{ true if inventory_hostname is in  groups['headnodes'] else false }},
   "log_level": "INFO",
   "node_name": "{{ inventory_hostname }}",
   "addresses": {
@@ -19,6 +19,6 @@
   ],
   "bootstrap_expect": {{ ansible_play_hosts | length }},
   "retry_join": [
-    {{ hostvars | groups_ips(['mysqlnodes', 'headnodes'], groups) | map("to_json") | join(',\n    ') }}
+    {{ hostvars | groups_ips(['mysqlnodes', 'headnodes'], groups) | difference([inventory_hostname]) | map("to_json") | join(',\n    ') }}
   ]
 }
