--- a/ansible/playbooks/roles/haproxy/templates/haproxy.cfg.j2
+++ b/ansible/playbooks/roles/haproxy/templates/haproxy.cfg.j2
@@ -68,6 +68,9 @@ backend horizon-backend
 {% for host in groups['headnodes'] %}
   server {{ host }} {{ hostvars[host]['interfaces']['service']['ip'] }}:9999 check inter 5s rise 1 fall 1
 {% endfor %}
+{% for host in groups['mysqlnodes'] %}
+  server {{ host }} {{ hostvars[host]['interfaces']['service']['ip'] }}:9999 check inter 5s rise 1 fall 1
+{% endfor %}
 
 backend rabbitmq-web-backend
   balance source
