--- a/ansible/playbooks/roles/haproxy/templates/haproxy.cfg.j2
+++ b/ansible/playbooks/roles/haproxy/templates/haproxy.cfg.j2
@@ -53,10 +53,7 @@ backend http-backend
   balance source
   option httpchk GET /
   http-check expect status 200
-{% for host in groups['headnodes'] %}
-  server {{ host }} {{ hostvars[host]['interfaces']['service']['ip'] }}:80 check inter 5s rise 1 fall 1
-{% endfor %}
-{% for host in groups['mysqlnodes'] %}
+{% for host in groups['headnodes'] + groups['mysqlnodes'] %}
   server {{ host }} {{ hostvars[host]['interfaces']['service']['ip'] }}:80 check inter 5s rise 1 fall 1
 {% endfor %}
 
@@ -66,9 +63,6 @@ backend horizon-backend
   option forwardfor
   http-check expect status 200
 {% for host in groups['headnodes'] %}
-  server {{ host }} {{ hostvars[host]['interfaces']['service']['ip'] }}:9999 check inter 5s rise 1 fall 1
-{% endfor %}
-{% for host in groups['mysqlnodes'] %}
   server {{ host }} {{ hostvars[host]['interfaces']['service']['ip'] }}:9999 check inter 5s rise 1 fall 1
 {% endfor %}
 
@@ -82,10 +76,7 @@ backend rabbitmq-web-backend
 {% endfor %}
 
 peers headnodes
-{% for host in groups['headnodes'] %}
-  peer {{ host }} {{ hostvars[host]['interfaces']['service']['ip'] }}:32768
-{% endfor %}
-{% for host in groups['mysqlnodes'] %}
+{% for host in groups['headnodes'] + groups['mysqlnodes'] %}
   peer {{ host }} {{ hostvars[host]['interfaces']['service']['ip'] }}:32768
 {% endfor %}
 
