limit image upload to RAW format only

--- a/chef/cookbooks/bcpc/templates/default/glance/glance-api.conf.erb
+++ b/chef/cookbooks/bcpc/templates/default/glance/glance-api.conf.erb
@@ -38,8 +38,8 @@ rbd_store_ceph_conf = /etc/ceph/ceph.conf
 
 
 [image_format]
-container_formats = ami,ari,aki,bare,ovf,ova,docker
-disk_formats = ami,ari,aki,vhd,vhdx,vmdk,raw,qcow2,vdi,iso,ploop.root-tar
+container_formats = bare
+disk_formats = raw
 
 
 [keystone_authtoken]
