--- a/chef/cookbooks/bcpc/templates/default/keystone/keystone-create-db.sql.erb
+++ b/chef/cookbooks/bcpc/templates/default/keystone/keystone-create-db.sql.erb
@@ -1,7 +1,15 @@
 CREATE DATABASE IF NOT EXISTS <%= @database['dbname'] %>;
 
-GRANT ALL PRIVILEGES ON <%= @database['dbname'] %>.* TO '<%= @database['username'] %>'@'localhost' \
-IDENTIFIED BY '<%= @database['password'] %>';
+CREATE USER IF NOT EXISTS '<%= @database['username'] %>'@'localhost' \
+  IDENTIFIED BY '<%= @database['password'] %>';
 
-GRANT ALL PRIVILEGES ON <%= @database['dbname'] %>.* TO '<%= @database['username'] %>'@'%' \
-IDENTIFIED BY '<%= @database['password'] %>';
+GRANT ALL PRIVILEGES \
+  ON <%= @database['dbname'] %>.* \
+  TO '<%= @database['username'] %>'@'localhost';
+
+CREATE USER IF NOT EXISTS '<%= @database['username'] %>'@'%' \
+  IDENTIFIED BY '<%= @database['password'] %>';
+
+GRANT ALL PRIVILEGES \
+  ON <%= @database['dbname'] %>.* \
+  TO '<%= @database['username'] %>'@'%';
