--- a/chef/cookbooks/bcpc/templates/default/powerdns/pdns-create-db.sql.erb
+++ b/chef/cookbooks/bcpc/templates/default/powerdns/pdns-create-db.sql.erb
@@ -1,14 +1,18 @@
 CREATE DATABASE IF NOT EXISTS <%= @db['dbname'] %>;
 
-GRANT ALL PRIVILEGES \
-  ON <%= @db['dbname'] %>.* \
-  TO '<%= @db['username'] %>'@'localhost' \
+CREATE USER IF NOT EXISTS '<%= @db['username'] %>'@'localhost' \
   IDENTIFIED BY '<%= @db['password'] %>';
 
 GRANT ALL PRIVILEGES \
   ON <%= @db['dbname'] %>.* \
-  TO '<%= @db['username'] %>'@'%' \
+  TO '<%= @db['username'] %>'@'localhost';
+
+CREATE USER IF NOT EXISTS '<%= @db['username'] %>'@'%' \
   IDENTIFIED BY '<%= @db['password'] %>';
+
+GRANT ALL PRIVILEGES \
+  ON <%= @db['dbname'] %>.* \
+  TO '<%= @db['username'] %>'@'%';
 
 use <%= @db['dbname'] %>;
 
