new nova parameter: resize_confirm_window
  - attribute default: 30s
  - (Integer) Automatically confirm resizes after N seconds.
  - https://docs.openstack.org/nova/ussuri/configuration/config.html#:~:text=resize_confirm_window

Signed-off-by: Justin Pacheco <jpacheco39@bloomberg.net>

--- a/chef/cookbooks/bcpc/templates/default/nova/nova.conf.erb
+++ b/chef/cookbooks/bcpc/templates/default/nova/nova.conf.erb
@@ -52,6 +52,10 @@ default_log_levels = "<%= node['bcpc']['nova']['default_log_levels'] %>"
 <% end %>
 dhcp_domain = <%= node['bcpc']['cloud']['domain'] %>
 
+<% unless node['bcpc']['nova']['resize_confirm_window'].nil? %>
+resize_confirm_window = <%= node['bcpc']['nova']['resize_confirm_window'] %>
+<% end %>
+
 [api]
 auth_strategy = keystone
 
