added support for resolv.conf search path
  - resolv.conf.j2 will now populate the `search` parameter of the
    /etc/resolv.conf file with a list of domain names (if defined)

  - default value: `{{ cloud_infrastructure_domain }}`

Signed-off-by: Justin Pacheco <jpacheco39@bloomberg.net>

--- a/ansible/playbooks/roles/common/templates/etc/resolv.conf.j2
+++ b/ansible/playbooks/roles/common/templates/etc/resolv.conf.j2
@@ -2,6 +2,9 @@
 # managed by ansible
 ###############################################################################
 
+{% if dns_search is defined and dns_search | length %}
+search {{ dns_search | join(' ') }}
+{% endif %}
 nameserver 127.0.0.1
 nameserver {{ cloud_ip }}
 {% for ns in dns['servers'] %}
