--- a/ansible/playbooks/roles/common/templates/ssh/sshd_config.j2
+++ b/ansible/playbooks/roles/common/templates/ssh/sshd_config.j2
@@ -33,7 +33,7 @@ LogLevel INFO
 
 # Authentication:
 LoginGraceTime 120
-PermitRootLogin {{ 'prohibit-password' if ansible_distribution_version == '20.04' else 'yes' }}
+PermitRootLogin no
 StrictModes yes
 
 RSAAuthentication yes
