ceph/quincy: Do not size pools when init'ing cloud
Quincy? has a bug where it flips out about billions of PGs
when trying to set a pool size of 1 and there are no OSDs
which are members of the cluster yet.

So, only create the pools when first standing up the mons
and then revisit it as part of 'configure-ceph'.

Signed-off-by: Tyler Stachecki <tstachecki@bloomberg.net>

--- a/chef/cookbooks/bcpc/templates/default/ceph/ceph.conf.erb
+++ b/chef/cookbooks/bcpc/templates/default/ceph/ceph.conf.erb
@@ -14,6 +14,9 @@ admin socket mode = 0775
 mon osd down out interval = <%= node['bcpc']['ceph']['mon_osd_down_out_interval'] %>
 mon max pg per osd = <%= node['bcpc']['ceph']['mon_max_pg_per_osd'] %>
 
+# Starting in Pacific, this override is needed to create pools of size 1
+mon allow pool size one = true
+
 # settings to throttle OSD scrubbing visible to both mgrs and OSDs
 osd deep scrub interval = <%= @node['bcpc']['ceph']['osd_deep_scrub_interval'] %>
 osd scrub max interval = <%= @node['bcpc']['ceph']['osd_scrub_max_interval'] %>
