--- a/ansible/playbooks/roles/common/templates/grub/default.j2
+++ b/ansible/playbooks/roles/common/templates/grub/default.j2
@@ -19,7 +19,7 @@ GRUB_DISTRIBUTOR=`lsb_release -i -s 2> /dev/null || echo Debian`
 GRUB_CMDLINE_LINUX_DEFAULT="vga=normal nomodeset 3 console=tty0 console=tty1"
 {% set ignore_ce = 'mce=ignore_ce' if not hardware_edac_polling else '' -%}
 {% set ipv6_cmdline = 'ipv6.disable=1' if not system_enable_ipv6 else '' -%}
-{% set nvme_core_cmdline = 'nvme_core.multipath=' + ('1' if hardware_nvme_multipath else '0') -%}
+{% set nvme_core_cmdline = 'nvme_core.multipath=' + ('1' if (compute_nvme_multipath if hostvars[inventory_hostname] | host_worknode() else general_nvme_multipath) else '0') -%}
 GRUB_CMDLINE_LINUX="{{ ' '.join([ignore_ce, ipv6_cmdline, nvme_core_cmdline] + grub_cmdline_linux) }}"
 
 # Uncomment to enable BadRAM filtering, modify to suit your needs
