Adding support for Service Tokens, for long-running OpenStack API com… (#2152)
* Adding support for Service Tokens, for long-running OpenStack API commands
* Correcting small autocaps typo for role name
* Third time's a charm, cleaner commit

Signed-off-by: David A. Desrosiers <setuid@gmail.com>

--- a/chef/cookbooks/bcpc/templates/default/cinder/cinder.conf.erb
+++ b/chef/cookbooks/bcpc/templates/default/cinder/cinder.conf.erb
@@ -46,6 +46,16 @@ lock_path = /var/lock/cinder
 [oslo_policy]
 policy_dirs = policy.d
 
+[service_user]
+send_service_user_token = true
+auth_type = password
+auth_url = <%= "https://#{@node['bcpc']['cloud']['fqdn']}:35357/" %>
+project_domain_name = Default
+user_domain_name = Default
+project_name = service
+username = <%= @config['cinder']['creds']['os']['username'] %>
+password = <%= @config['cinder']['creds']['os']['password'] %>
+
 [keystone_authtoken]
 www_authenticate_uri = <%= "https://#{node['bcpc']['cloud']['fqdn']}:5000" %>
 auth_url = <%= "https://#{node['bcpc']['cloud']['fqdn']}:35357" %>
@@ -56,6 +66,8 @@ user_domain_name = Default
 project_name = service
 username = <%= @config['cinder']['creds']['os']['username'] %>
 password = <%= @config['cinder']['creds']['os']['password'] %>
+service_token_roles = admin
+service_token_roles_required = True
 
 <% @backends.each do |backend| %>
 [<%= backend['name'] %>]
