ceph: Remove defunct settings (#2124)
* ceph: Fix bluestore_cache_size > osd_memory_target

osd_memory_target describes the total amount of memory tha
the entire OSD process should aim for. It makes no sense
to have a particular OSD cache be greater than that value.

Signed-off-by: Tyler Stachecki <tstachecki@bloomberg.net>

* ceph: Remove settings which no longer exist

Self-explanatory... these settings are from an older
version of Ceph, and were never removed.

Signed-off-by: Tyler Stachecki <tstachecki@bloomberg.net>

* ceph: Remove a former workaround

Octopus 15.2.12 had a bug wherein threaded fscks could
crash/shred the data on the OSD. The issue has long since
been fixed, and we no longer need to disable it.

Parent tracker:
https://tracker.ceph.com/issues/50017

Signed-off-by: Tyler Stachecki <tstachecki@bloomberg.net>

* ceph: Fix an (incorrectly) specified setting

The osd_max_scrubs settings was misdeclared and was not
actually doing anything. The attributes value wanted to
raise it to 5, but we've been using 1 (the default) for
a very long time and have no need to scrub faster.

Signed-off-by: Tyler Stachecki <tstachecki@bloomberg.net>

* ceph: Remove unused max_open_files

The max_open_files argument is only used by the init.d
variant of the startup scripts, which have been replaced
by systemd. As this setting has not actually been
respected for quite some time, remove it.

Signed-off-by: Tyler Stachecki <tstachecki@bloomberg.net>

* ceph: Reduce osd_memory_target to 6GiB

Now that we are using NUMA-pinned OSD instances, there is:

  a) Less "slack" space that can be shared across all the
     OSD processes, as they are segmented into bins.

  b) More unbalanced use of memory, as the number of OSD
     processes do not evenly divide into the number of
     NUMA nodes on all our platforms.

Thus, we need to drop the osd_memory_target just a bit to
accomodate the new arranagement in order to avoid m

--- a/chef/cookbooks/bcpc/templates/default/ceph/ceph.conf.erb
+++ b/chef/cookbooks/bcpc/templates/default/ceph/ceph.conf.erb
@@ -7,7 +7,6 @@ auth client required = cephx
 mon initial members = <%= @storageheadnodes.map{ |n| n['hostname'] }.join(',') %>
 mon host = <%= @storageheadnodes.map{ |n| "[v2:#{n['service_ip']}:3300]" }.join(',') %>
 ms_bind_msgr1 = false
-max open files = <%= node['bcpc']['ceph']['max_open_files'] %>
 rbd default features = <%= node['bcpc']['ceph']['rbd_default_features'] %>
 osd crush initial weight = <%= node['bcpc']['ceph']['osd_crush_initial_weight'] %>
 admin socket mode = 0775
@@ -57,20 +56,16 @@ osd scrub end hour = <%= @node['bcpc']['ceph']['osd_scrub_end_hour'] %>
 osd scrub sleep = <%= @node['bcpc']['ceph']['osd_scrub_sleep'] %>
 osd scrub chunk min = <%= @node['bcpc']['ceph']['osd_scrub_chunk_min'] %>
 osd scrub chunk max = <%= @node['bcpc']['ceph']['osd_scrub_chunk_max'] %>
-osd scrub max scrubs = <%= @node['bcpc']['ceph']['osd_max_scrubs'] %>
+osd max scrubs = <%= @node['bcpc']['ceph']['osd_max_scrubs'] %>
 
 # settings to throttle OSD recovery parameters
-osd mon report interval min = <%= @node['bcpc']['ceph']['osd_mon_report_interval_min'] %>
+osd mon report interval = <%= @node['bcpc']['ceph']['osd_mon_report_interval'] %>
 osd recovery max active = <%= @node['bcpc']['ceph']['osd_recovery_max_active'] %>
-osd recovery threads = <%= @node['bcpc']['ceph']['osd_recovery_threads'] %>
 osd recovery op priority = <%= @node['bcpc']['ceph']['osd_recovery_op_priority'] %>
 osd max backfills  = <%= @node['bcpc']['ceph']['osd_max_backfills'] %>
-osd op threads = <%= @node['bcpc']['ceph']['osd_op_threads'] %>
 
 # bluestore tuning
 bluestore rocksdb options = <%= @node['bcpc']['ceph']['bluestore_rocksdb_options'].join(',') %>
-bluestore cache size ssd = <%= @node['bcpc']['ceph']['bluestore_cache_size_ssd'] %>
-bluestore fsck quick fix threads = <%= node['bcpc']['ceph']['bluestore_fsck_quick_fix_threads'] %>
 
 # As of Octopus 15.2.12, the AVL block allocator can degrade performance
 # when OSDs have fragmentated blocks, especially so when high IOP flash media
